--- a/pages/Csearchworkers.html
+++ b/pages/Csearchworkers.html
@@ -32,48 +32,48 @@ id = "Logo" alt="" height = 100 width = 200>
   <!-- The following frame adds the list of jobs submitted on the google form application -->
 	<div style="padding: 20px">
 	<div class = "WorkerList">
-	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=1361032538&range=A1:C&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="300" seamless frameborder="0"></iframe>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=1361032538&range=A1:C&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="300" seamless frameborder="0" allowtransparency="true"></iframe>
 	</div>
 	<h2>Worker Details</h2>	
-	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A20:C29&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="240" seamless frameborder="0"></iframe>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A20:C36&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="380" seamless frameborder="0"></iframe>
 	
 <!-- 	<h3>Schedule</h3> -->
-	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A32:B36&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe>
+	<!-- <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A32:B36&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe> -->
 	
 	<button onclick="location.href ='Cconfirm.html';" type="button"; 
 	style= "position: relative; left: 50%; bottom: 300px">Book this Worker</button>
 	
 	<div class="space"></div>
 
-	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A1:C10&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="240" seamless frameborder="0"></iframe>
-	<h3>Schedule</h3>
-	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A13:B17&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A1:C17&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="380" seamless frameborder="0"></iframe>
+	<!-- <h3>Schedule</h3>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A13:B17&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe> -->
 	<button onclick="location.href ='Cconfirm.html';" type="button"; 
 	style= "position: relative; left: 50%; bottom: 300px">Book this Worker</button>
 	
 	<div class="space"></div>
 
-	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A58:C67&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="240" seamless frameborder="0"></iframe>
-	<h3>Schedule</h3>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A59:C75&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="380" seamless frameborder="0"></iframe>
+	<!-- <h3>Schedule</h3>
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A69:B73&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe>
-	
+	 -->
 	<button onclick="location.href ='Cconfirm.html';" type="button"; 
 	style= "position: relative; left: 50%; bottom: 300px">Book this Worker</button>
 	
 	<div class="space"></div>
 
-	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A75:C84&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="240" seamless frameborder="0"></iframe>
-	<h3>Schedule</h3>
-	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A86:B90&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A77:C93&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="380" seamless frameborder="0"></iframe>
+	<!-- <h3>Schedule</h3>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A86:B90&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe> -->
 	<button onclick="location.href ='Cconfirm.html';" type="button"; 
 	style= "position: relative; left: 50%; bottom: 300px">Book this Worker</button>
 	
 	<div class="space"></div>
 
-	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A39:C48&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="240" seamless frameborder="0"></iframe>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A39:C55&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="380" seamless frameborder="0"></iframe>
 
-	<h3>Schedule</h3>
-	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A50:B54&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe>
+	<!-- <h3>Schedule</h3>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A50:B54&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe> -->
 
 	<button onclick="location.href ='Cconfirm.html';" type="button"; 
 	style= "position: relative; left: 50%; bottom: 300px">Book this Worker</button>
@@ -83,6 +83,11 @@ id = "Logo" alt="" height = 100 width = 200>
 </body>
 
 		<style>
+
+.space{
+	padding-bottom: 50px;
+}
+
 .topnav {
 overflow: hidden;
 background-color: #800000;
