--- a/pages/Csearchworkers.html
+++ b/pages/Csearchworkers.html
@@ -35,54 +35,70 @@ id = "Logo" alt="" height = 100 width = 200>
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=1361032538&range=A1:C&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="300" seamless frameborder="0" allowtransparency="true"></iframe>
 	</div>
 	<h2>Worker Details</h2>	
-	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A20:C36&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="380" seamless frameborder="0"></iframe>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A20:C36&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 50% height="380" seamless frameborder="0"></iframe>
 	
 <!-- 	<h3>Schedule</h3> -->
 	<!-- <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A32:B36&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe> -->
 	
-	<button onclick="location.href ='Cconfirm.html';" type="button"; 
-	style= "position: relative; left: 50%; bottom: 300px">Book this Worker</button>
+	<button class="button" onclick="location.href ='Cconfirm.html';" type="button"; 
+	style= "position: relative; left: 70%; bottom: 250px">Book this Worker</button>
 	
 	<div class="space"></div>
 
-	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A1:C17&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="380" seamless frameborder="0"></iframe>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A1:C17&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 50% height="380" seamless frameborder="0"></iframe>
 	<!-- <h3>Schedule</h3>
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A13:B17&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe> -->
-	<button onclick="location.href ='Cconfirm.html';" type="button"; 
-	style= "position: relative; left: 50%; bottom: 300px">Book this Worker</button>
+	<button class="button" onclick="location.href ='Cconfirm.html';" type="button"; 
+	style= "position: relative; left: 70%; bottom: 250px">Book this Worker</button>
 	
 	<div class="space"></div>
 
-	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A59:C75&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="380" seamless frameborder="0"></iframe>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A59:C75&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 50% height="380" seamless frameborder="0"></iframe>
 	<!-- <h3>Schedule</h3>
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A69:B73&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe>
 	 -->
-	<button onclick="location.href ='Cconfirm.html';" type="button"; 
-	style= "position: relative; left: 50%; bottom: 300px">Book this Worker</button>
+	<button class="button" onclick="location.href ='Cconfirm.html';" type="button"; 
+	style= "position: relative; left: 70%; bottom: 250px">Book this Worker</button>
 	
 	<div class="space"></div>
 
-	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A77:C93&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="380" seamless frameborder="0"></iframe>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A77:C93&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 50% height="380" seamless frameborder="0"></iframe>
 	<!-- <h3>Schedule</h3>
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A86:B90&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe> -->
-	<button onclick="location.href ='Cconfirm.html';" type="button"; 
-	style= "position: relative; left: 50%; bottom: 300px">Book this Worker</button>
+	<button class="button" onclick="location.href ='Cconfirm.html';" type="button"; 
+	style= "position: relative; left: 70%; bottom: 250px">Book this Worker</button>
 	
 	<div class="space"></div>
 
-	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A39:C55&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="380" seamless frameborder="0"></iframe>
+	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A39:C55&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 50% height="380" seamless frameborder="0"></iframe>
 
 	<!-- <h3>Schedule</h3>
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A50:B54&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe> -->
 
-	<button onclick="location.href ='Cconfirm.html';" type="button"; 
-	style= "position: relative; left: 50%; bottom: 300px">Book this Worker</button>
+	<button class="button" onclick="location.href ='Cconfirm.html';" type="button"; 
+	style= "position: relative; left: 70%; bottom: 250px">Book this Worker</button>
 
 
 	</div>
 </body>
 
 		<style>
+
+.button {
+		overflow: hidden;
+		background-color: #800000;
+		border: 3.5px solid black;
+		text-align: center;
+		padding: 14px 16px;
+ 		float: center;
+  		display: block;
+  		color: white;
+  		font-size: 20px;
+		font-weight: bold;
+		text-decoration: none;
+		}
+
+
 
 .space{
 	padding-bottom: 50px;
