--- a/pages/Hhome.html
+++ b/pages/Hhome.html
@@ -92,8 +92,8 @@ id = "Logo" alt="" height = 100 width = 200>
 	 <div class="topnav">
 		<a href="Hhome.html">Home</a>
   		<a href="Hreviews.html">Read Reviews</a>
-		<a href="Happly.html">Apply</a>
-  		<a href="form.html">Login</a>
+		<a href="Happly.html">Create Profile</a>
+  		
 
 	</div> 
 	<h3> Here is an explanation of the buttons on the navigation bar:<br>
