--- a/pages/Hreviews.html
+++ b/pages/Hreviews.html
@@ -17,8 +17,8 @@
 	 <div class="topnav">
   <a href="Hhome.html">Home</a>
   <a class="active"href="Hreviews.html">Read Reviews</a>
-  <a href="Happly.html">Apply</a>
-  <a href="form.html">Login</a>
+  <a href="Happly.html">Create Profile</a>
+ 
 </div> 
 
 
