--- a/pages/Happly.html
+++ b/pages/Happly.html
@@ -18,8 +18,8 @@
 	 <div class="topnav">
   		<a href="Hhome.html">Home</a>
   		<a href="Hreviews.html">Read Reviews</a>
-  		<a class="active" href="Happly.html">Apply</a>
-		<a href="form.html">Login</a>
+  		<a class="active" href="Happly.html">Create Profile</a>
+		
 	</div>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScOXk_Dp5ON7qGdHUfIsbGFn045AwmSCK2pX1cR2HvOqApKEg/viewform?embedded=true" 
 	width="640" height="3075" frameborder="0" marginheight="0" marginwidth="0" onload = "window.parent.scrollTo(0,0)">Loading…</iframe>
