--- a/pages/Hreviews.html
+++ b/pages/Hreviews.html
@@ -95,7 +95,7 @@ font-weight: light;
 </style>
 
 <p style = "color: #800000; font-weight: bold"> Reviews:<br/> </p>
-<p><span id="first"> </span><br />
+<p><span id="reviews"> </span><br />
 
     <script >
 
