--- a/pages/Happly.html
+++ b/pages/Happly.html
@@ -21,8 +21,8 @@
   		<a class="active" href="Happly.html">Create Profile</a>
 		
 	</div>
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScOXk_Dp5ON7qGdHUfIsbGFn045AwmSCK2pX1cR2HvOqApKEg/viewform?embedded=true" 
-	width="640" height="3075" frameborder="0" marginheight="0" marginwidth="0" onload = "window.parent.scrollTo(0,0)">Loading…</iframe>
+<p align="center">iframe src="https://docs.google.com/forms/d/e/1FAIpQLScOXk_Dp5ON7qGdHUfIsbGFn045AwmSCK2pX1cR2HvOqApKEg/viewform?embedded=true" 
+	width="640" height="3075" frameborder="0" marginheight="0" marginwidth="0" onload = "window.parent.scrollTo(0,0)">Loading…</iframe></p>
 
 
 
