Added Job requests as a menu tab

--- a/pages/Hhome.html
+++ b/pages/Hhome.html
@@ -93,6 +93,7 @@ id = "Logo" alt="" height = 100 width = 200>
 		<a href="Hhome.html">Home</a>
   		<a href="Hreviews.html">Read Reviews</a>
 		<a href="Happly.html">Create Profile</a>
+		<a href="Hjobrequests.html">Job Requests</a> 
   		
 
 	</div> 
