--- a/pages/Happly.html
+++ b/pages/Happly.html
@@ -19,6 +19,7 @@
   		<a href="Hhome.html">Home</a>
   		<a href="Hreviews.html">Read Reviews</a>
   		<a class="active" href="Happly.html">Create Profile</a>
+		<a href="Hjobrequests.html">Job Requests</a>
 		
 	</div>
 <p align="center">iframe src="https://docs.google.com/forms/d/e/1FAIpQLScOXk_Dp5ON7qGdHUfIsbGFn045AwmSCK2pX1cR2HvOqApKEg/viewform?embedded=true" 
