--- a/pages/Hreviews.html
+++ b/pages/Hreviews.html
@@ -18,6 +18,7 @@
   <a href="Hhome.html">Home</a>
   <a class="active"href="Hreviews.html">Read Reviews</a>
   <a href="Happly.html">Create Profile</a>
+  <a href="Hjobrequests.html">Job Requests</a>
  
 </div> 
 
