--- a/pages/Csearchworkers.html
+++ b/pages/Csearchworkers.html
@@ -17,8 +17,6 @@ id = "Logo" alt="" height = 100 width = 200>
 	<h2><center>Customer</center></h2>
 	<hr>
 	
-	
-	
 	<div class="topnav">
   <a href="Chome.html">Home</a>
   <a class="active" href="#search workers">Search Workers</a>
@@ -40,7 +38,7 @@ id = "Logo" alt="" height = 100 width = 200>
 	<!-- <h3>Schedule</h3>
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A50:B54&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe> -->
 
-	<button class="button" onclick="location.href ='Cconfirm.html';" type="button"; 
+	<button class="button" onclick="location.href ='CrequestJob.html';" type="button"; 
 	style= "position: relative; left: 70%; bottom: 250px">Book this Worker</button>
 
 	<div class="space"></div>
@@ -50,7 +48,7 @@ id = "Logo" alt="" height = 100 width = 200>
 <!-- 	<h3>Schedule</h3> -->
 	<!-- <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A32:B36&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe> -->
 	
-	<button class="button" onclick="location.href ='Cconfirm.html';" type="button"; 
+	<button class="button" onclick="location.href ='CrequestJob.html';" type="button"; 
 	style= "position: relative; left: 70%; bottom: 250px">Book this Worker</button>
 	
 	<div class="space"></div>
@@ -59,7 +57,7 @@ id = "Logo" alt="" height = 100 width = 200>
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A77:C93&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 50% height="380" seamless frameborder="0"></iframe>
 	<!-- <h3>Schedule</h3>
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A86:B90&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe> -->
-	<button class="button" onclick="location.href ='Cconfirm.html';" type="button"; 
+	<button class="button" onclick="location.href ='CrequestJob.html';" type="button"; 
 	style= "position: relative; left: 70%; bottom: 250px">Book this Worker</button>
 	
 	<div class="space"></div>
@@ -68,7 +66,7 @@ id = "Logo" alt="" height = 100 width = 200>
 	<!-- <h3>Schedule</h3>
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A69:B73&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe>
 	 -->
-	<button class="button" onclick="location.href ='Cconfirm.html';" type="button"; 
+	<button class="button" onclick="location.href ='CrequestJob.html';" type="button"; 
 	style= "position: relative; left: 70%; bottom: 250px">Book this Worker</button>
 	
 	
@@ -78,7 +76,7 @@ id = "Logo" alt="" height = 100 width = 200>
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A1:C17&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 50% height="380" seamless frameborder="0"></iframe>
 	<!-- <h3>Schedule</h3>
 	<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=510441352&range=A13:B17&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="130" seamless frameborder="0"></iframe> -->
-	<button class="button" onclick="location.href ='Cconfirm.html';" type="button"; 
+	<button class="button" onclick="location.href ='CrequestJob.html';" type="button"; 
 	style= "position: relative; left: 70%; bottom: 250px">Book this Worker</button>
 	
 	
