added worker list to job request form

--- a/pages/CrequestJob.html
+++ b/pages/CrequestJob.html
@@ -22,6 +22,11 @@
     <a href="Creadreviews.html">Read Reviews</a>
 	</div>
 
+  <div style="padding: 20px">
+  <div class = "WorkerList">
+  <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQUdL_osoF9Oi3BTdMx9IUZXnzQf5klTw-cumssWnyWMmwSNvXwclNnTvglQTQpMoZvgLObtCjHCUx8/pubhtml?gid=1361032538&range=A1:C&amp;single=true&amp;chrome=false&amp;widget=false&amp;headers=false"width = 100% height="300" seamless frameborder="0" allowtransparency="true"></iframe>
+  </div>
+
 <p align="center"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLScJl-h3L9w85mWmzWTpVMX-EENCkUxbJWvNeFTenzj9lJUr8w/viewform?embedded=true" width="640" height="1310" frameborder="0" marginheight="0" marginwidth="0" onload = "window.parent.scrollTo(0,0)">Loading…</iframe></p>
 
 
