--- a/pages/Hhome.html
+++ b/pages/Hhome.html
@@ -101,8 +101,8 @@ id = "Logo" alt="" height = 100 width = 200>
 		<br>
 		<ul>
 		<li>Read Reviews: this is where workers can read reviews about themselves or other workers to get feedback from customers.<br> </li>
-		<li>Apply: this is where workers can submit their name, contact information, etc. to enable customers to contact them. <br> </li>
-		
+		<li>Create Profile: this is where workers can submit their name, contact information, etc. to enable customers to contact them. <br> </li>
+		<li>Job Requests: this is where workers can view customer job requests to contact them for confirmation. <br> </li>
 		</ul>
 		</h3>
 	
